tests/prepare_release/package_selection/Cargo.toml_knope.toml_INVALID_output.txt
Error:   × Problem with workflow release

Error:   × Error deserializing Cargo.toml: TOML parse error at line 1, column 1
  │   |
  │ 1 |
  │   | ^
  │ missing field `package`
  │ 
  ╰─▶ TOML parse error at line 1, column 1
        |
      1 |
        | ^
      missing field `package`
      

